--- a/registro.html
+++ b/registro.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <h1>Registro de Viagens</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="cadastro.html">Cadastrar</a></li>
-                <li><a href="resumo.html">Resumo das viagens</a></li>
-            </ul>
-        </nav>
     </header>
+    <nav class="navbar">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="cadastro.html">Cadastrar</a></li>
+            <li><a href="resumo.html">Resumo</a></li>
+        </ul>
+    </nav>
 <!-- Barra de pesquisa/verificação de viagens -->   
     <main class="registro-main">
         <div class="srchBar">
@@ -26,6 +26,8 @@
         <ul id="listaViagens"></ul>
         <button id="deleteSelected" class="button" disabled>Excluir</button>
     </main>
-    <script src="./assets/JS/Registro.js"></script>
+    <div class="script">
+        <script src="./assets/JS/Registro.js"></script>
+    </div>    
 </body>
 </html>
