--- a/resumo.html
+++ b/resumo.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Resumo das viagens</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="cadastro.html">Cadastrar</a></li>
-                <li><a href="registro.html">Registro</a></li>
-            </ul>
-        </nav>
+        <h1>Resumo</h1>
     </header>
+    <nav class="navbar">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="cadastro.html">Cadastrar</a></li>
+            <li><a href="registro.html">Registro</a></li>
+        </ul>
+    </nav>
  <!--Tabela do resumo-->   
     <main class="resumo-main">
         <table id="resumoTable">
