--- a/home.html
+++ b/home.html
@@ -9,14 +9,17 @@
 <body>
     <header>
         <h1>Home</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="cadastro.html">Cadastrar</a></li>
-                <li><a href="registro.html">Registro de viagens</a></li>    
-                <li><a href="resumo.html">Resumo</a></li>
-            </ul>
-        </nav>
     </header>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique animi praesentium iure aliquam ratione fugiat assumenda at, corrupti ipsa consequatur, quod numquam accusantium rem magni labore laudantium cumque nesciunt ad?</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tempora corrupti, quaerat saepe esse perspiciatis enim eius illo ut soluta dolorem nam quidem magnam reprehenderit blanditiis molestias inventore earum fugiat.</p>
+    <nav class="navbar">
+        <ul>
+            <li><a href="cadastro.html">Cadastrar</a></li>
+            <li><a href="registro.html">Registro de viagens</a></li>    
+            <li><a href="resumo.html">Resumo</a></li>
+        </ul>
+    </nav>
+    <main class="home_main">
+        <h2>ERROR 404!!!!</h2>
+        <p>Em construção........</p>
+    </main>
+    
 </body>    
