--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
     </header>
     <nav class="navbar">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="cadastro.html">Cadastrar</a></li>
             <li><a href="resumo.html">Resumo</a></li>
         </ul>
